--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 <body >
     <div class="container">
         <h2 >Sign Up</h2>
-        <h6>Already have an account?<a href="index2.html">Sign in</a></h6>
+        <h6>Already have an account? <a href="#">Sign in</a></h6>
         <form class="signup">
             <label for="name">First Name</label>
             <input type="text"placeholder="" >
             <label for="name">Last Name</label>
             <input type="text" placeholder="">
             <label for="name">Email</label>
-            <input type="text" placeholder="">
+            <input type="text" placeholder="example@gmail.com">
             <label for="name">Password</label>
             <input type="password" placeholder="">
             <label for="name">Confirm Password</label>
