--- a/index2.html
+++ b/index2.html
@@ -4,8 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
+    <link rel="stylesheet" href="style2.css">
 </head>
-<body>
-    
+<body class="whole">
+    <h2>Mummy Seun Perishables</h2>
+    <h3>Welcome</h3>
+    <div class="container">
+        <h4>Peppers</h4>
+        <ul>
+            <li>Tomatoes</li>
+            <li>Rodo</li>
+            <li>Bawa</li>
+            <li>Shombo</li>
+        </ul>
+        <br>
+        <h4>Vegetables</h4>
+        <ul>
+            <li>Bitter Leaf</li>
+            <li>Pumpkin Leaf</li>
+            <li>Shoko</li>
+            <li>Tete</li>
+        </ul>
+    </div>
+
 </body>
 </html>
