--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 <body >
     <div class="container">
         <h2 >Sign Up</h2>
-        <h6>Already have an account? <a href="#">Sign in</a></h6>
         <form class="signup">
             <label for="name">First Name</label>
             <input type="text"placeholder="" >
@@ -22,8 +21,9 @@
             <label for="name">Confirm Password</label>
             <input type="password" placeholder="">
             <p>By clicking sign up you agree to the <a href="#">Terms and conditions</a></p>
-            <input type="button" value="Sign Up">
+            <a href="index2.html"><input type="button" value="Sign Up"></a>
         </form>
+        <h6>Already have an account? <a href="#">Sign in</a></h6>
     </div>
 </body>
 </html>
